--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@
                                 <img id="productImageSrc" src="" class="max-h-full max-w-full object-contain hidden" alt="Producto" onerror="this.onerror=null; this.src='https://placehold.co/300x200/png?text=Error+al+cargar';" />
                                 <svg id="productImagePlaceholder" xmlns="http://www.w3.org/2000/svg" class="h-24 w-24 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"/></svg>
                             </div>
+                            <!-- Botón para cambiar imagen (solo admin) -->
+<div class="mt-2 admin-only text-center">
+    <button id="changeImageBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg font-medium transition-all">
+        Cambiar imagen 🔄
+    </button>
+</div>
+
+<!-- Formulario oculto para nueva URL -->
+<div id="changeImageForm" class="hidden mt-4 admin-only">
+    <label for="newImageUrl" class="block text-sm font-medium text-gray-700 mb-1">Nueva URL de imagen:</label>
+    <input type="url" id="newImageUrl" placeholder="https://..." class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+    <div class="flex justify-end space-x-2 mt-2">
+        <button id="cancelImageChange" class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-4 py-2 rounded-lg font-medium transition-all">Cancelar</button>
+        <button id="saveImageChange" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg font-medium transition-all">Guardar</button>
+    </div>
+</div>
+
                             <div class="space-y-2" id="productFields">
                                 <p><strong>Número de Ítem:</strong> <span id="productItemNumber" class="text-gray-700 cursor-pointer"></span></p>
                                 <p><strong>UPC:</strong> <span id="productUpc" class="text-gray-700"></span></p>
@@ -867,7 +884,48 @@ function importFromCSV(file) {
                 input.addEventListener('blur', saveChange); input.addEventListener('keypress', (e)=>{ if(e.key==='Enter') input.blur(); });
             });
         })();
+// ==== CAMBIAR IMAGEN MANUALMENTE ====
+const changeImageBtn = document.getElementById('changeImageBtn');
+const changeImageForm = document.getElementById('changeImageForm');
+const newImageUrl = document.getElementById('newImageUrl');
+const cancelImageChange = document.getElementById('cancelImageChange');
+const saveImageChange = document.getElementById('saveImageChange');
 
+if (changeImageBtn && changeImageForm) {
+  changeImageBtn.addEventListener('click', () => {
+    changeImageBtn.classList.add('hidden');
+    changeImageForm.classList.remove('hidden');
+    newImageUrl.value = '';
+  });
+
+  cancelImageChange.addEventListener('click', () => {
+    changeImageForm.classList.add('hidden');
+    changeImageBtn.classList.remove('hidden');
+  });
+
+  saveImageChange.addEventListener('click', () => {
+    const url = newImageUrl.value.trim();
+    if (!url) {
+      showToast('Por favor ingresa una URL válida.', true);
+      return;
+    }
+
+    const id = deleteProductBtn.dataset.id;
+    const product = products.find(p => p.id === id);
+    if (!product) {
+      showToast('No se encontró el producto.', true);
+      return;
+    }
+
+    product.url = sanitizeInput(url);
+    saveData();
+    showProductDetails(id);
+    showToast('Imagen actualizada correctamente.');
+
+    changeImageForm.classList.add('hidden');
+    changeImageBtn.classList.remove('hidden');
+  });
+}
         // ==== Init ====
         function init(){ loadData(); setupEventListeners(); checkLibraries(); showView('public'); }
         document.addEventListener('DOMContentLoaded', init);
