--- a/index.html
+++ b/index.html
@@ -22,22 +22,45 @@
     <!-- Apple Touch Icon (opcional) -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
-    <style>
-        body { font-family: 'Poppins', sans-serif; background-color: #f8fafc; }
-        .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
-        .custom-scrollbar::-webkit-scrollbar { width: 6px; height: 6px; }
-        .custom-scrollbar::-webkit-scrollbar-track { background: #f1f1f1; }
-        .custom-scrollbar::-webkit-scrollbar-thumb { background: #c7d2fe; border-radius: 3px; }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #a5b4fc; }
-        .error-message { color: #dc2626; font-size: 0.875rem; margin-top: 0.25rem; }
-        .loader { border: 4px solid #f3f3f3; border-top: 4px solid #4f46e5; border-radius: 50%; width: 24px; height: 24px; animation: spin 1s linear infinite; margin: 0 auto; }
-        @keyframes spin { 0% { transform: rotate(0deg);} 100% { transform: rotate(360deg);} }
-        .product-image-container { position: relative; width: 100%; padding-top: 100%; }
-        .product-image { position: absolute; top:0; left:0; width:100%; height:100%; object-fit: contain; border-radius:8px; background:#f9f9f9; }
-        /* Selección múltiple (admin) */
-        .selected-card { outline: 2px solid rgb(59 130 246); background: rgb(239 246 255); }
-    </style>
+<style>
+    body { font-family: 'Poppins', sans-serif; background-color: #fefce8; }
+    .header-bg { background: linear-gradient(to right, #dc2626, #b91c1c); }
+    .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
+    .custom-scrollbar::-webkit-scrollbar { width: 8px; height: 8px; }
+    .custom-scrollbar::-webkit-scrollbar-track { background: #f5f5f5; }
+    .custom-scrollbar::-webkit-scrollbar-thumb { background: #dc2626; border-radius: 4px; }
+    .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #b91c1c; }
+    .error-message { color: #dc2626; font-size: 0.875rem; margin-top: 0.25rem; }
+    .loader { border: 4px solid #f3f3f3; border-top: 4px solid #dc2626; border-radius: 50%; width: 24px; height: 24px; animation: spin 1s linear infinite; margin: 0 auto; }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    .product-image-container {
+        position: relative;
+        width: 100%;
+        aspect-ratio: 1 / 1; /* Fuerza un contenedor cuadrado */
+        max-width: 250px; /* Tamaño máximo para e-commerce */
+        margin: 0 auto; /* Centrado */
+    }
+    .product-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Llena el contenedor, recortando si es necesario */
+        border-radius: 8px;
+        background: #fff;
+        border: 1px solid #e5e7eb;
+    }
+    .selected-card { outline: 2px solid #dc2626; background: #fef2f2; }
+    .btn-primary { background-color: #dc2626; color: white; transition: background-color 0.2s ease; }
+    .btn-primary:hover { background-color: #b91c1c; }
+    .btn-secondary { background-color: #fefce8; color: #dc2626; border: 1px solid #dc2626; transition: background-color 0.2s ease; }
+    .btn-secondary:hover { background-color: #fee2e2; }
+    @media (max-width: 640px) {
+        .product-image-container { max-width: 150px; } /* Más pequeño en móviles */
+        .grid { grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); } /* Grid más compacto */
+    }
+</style>
 </head>
 <body>
     <div class="min-h-screen flex flex-col">
